<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight = "1.0"
        card_view:cardElevation="10dp"
        card_view:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/eventTextView"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight = "1.0"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/event"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/areaDescTextView"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight = "1.0"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/area_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventTextView" />

            <Button
                android:id="@+id/viewMapButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="97dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:text="@string/view_map"
                android:textColor="#3F51B5"
                android:textSize="12sp"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/areaDescTextView" />

            <TextView
                android:id="@+id/headlineTextView"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight = "1.0"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/headline"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewMapButton" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight = "1.0"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headlineTextView" />

            <TextView
                android:id="@+id/instructionTextView"
                android:layout_width="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight = "1.0"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/instruction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>